--- a/src/main/resources/production/v1/helm/aws-load-balancer.mustache
+++ b/src/main/resources/production/v1/helm/aws-load-balancer.mustache
@@ -6,8 +6,8 @@ clusterName: {{deployment:id}}-eks
 replicaCount: 2
 
 serviceAccount:
-  create: false
-  name: {{deployment:id}}-aws-load-balancer-sa
+  create: true
+  name: aws-load-balancer-controller
 
 enableServiceMutatorWebhook: false
 
