--- a/src/main/resources/production/v1/setup/certificate.mustache
+++ b/src/main/resources/production/v1/setup/certificate.mustache
@@ -2,6 +2,7 @@ domainName: "*.{{deployment:domain}}"
 subjectAlternativeNames:
   - "{{deployment:domain}}"
 validationMethod: DNS
+hostedZoneName: "{{deployment:domain}}"
 removalPolicy: retain
 tags:
   "{{deployment:domain}}:resource-type": certificate
