--- a/src/main/resources/production/v1/eks/addons.mustache
+++ b/src/main/resources/production/v1/eks/addons.mustache
@@ -154,7 +154,7 @@ externalDns:
   txtOwnerId: {{deployment:id}}
   domainFilters:
     - {{deployment:domain}}
-  serviceAccount:
+  podIdentity:
     metadata:
       name: external-dns
       namespace: external-dns
@@ -169,6 +169,10 @@ externalDns:
       annotations: { }
     role:
       name: {{deployment:id}}-external-dns-sa
+      principal:
+        type: service
+        value: pods.eks.amazonaws.com
+        action: sts:AssumeRole
       managedPolicyNames: [ ]
       customPolicies:
         - name: {{deployment:id}}-external-dns
@@ -191,7 +195,7 @@ externalSecrets:
     version: 1.1.1
     namespace: external-secrets
     values: helm/external-secrets.mustache
-  serviceAccount:
+  podIdentity:
     metadata:
       name: external-secrets
       namespace: external-secrets
@@ -206,6 +210,10 @@ externalSecrets:
       annotations: { }
     role:
       name: {{deployment:id}}-external-secrets-sa
+      principal:
+        type: service
+        value: pods.eks.amazonaws.com
+        action: sts:AssumeRole
       managedPolicyNames: [ ]
       customPolicies:
         - name: {{deployment:id}}-external-secrets-access
@@ -252,7 +260,7 @@ karpenter:
     values: helm/karpenter.mustache
   podIdentity:
     metadata:
-      name: {{deployment:id}}-karpenter-sa
+      name: karpenter
       namespace: kube-system
       labels:
         "{{deployment:domain}}/resource-type": service-account
@@ -360,9 +368,9 @@ awsLoadBalancer:
     version: 1.16.0
     namespace: aws-load-balancer
     values: helm/aws-load-balancer.mustache
-  serviceAccount:
+  podIdentity:
     metadata:
-      name: {{deployment:id}}-aws-load-balancer-sa
+      name: aws-load-balancer-controller
       namespace: aws-load-balancer
       labels:
         "{{deployment:domain}}/resource-type": service-account
@@ -375,6 +383,10 @@ awsLoadBalancer:
       annotations: { }
     role:
       name: {{deployment:id}}-aws-load-balancer-sa
+      principal:
+        type: service
+        value: pods.eks.amazonaws.com
+        action: sts:AssumeRole
       managedPolicyNames: [ ]
       customPolicies:
         - name: {{deployment:id}}-aws-load-balancer-controller
@@ -423,7 +435,7 @@ argocd:
     version: 9.1.7
     namespace: argocd
     values: helm/argocd.mustache
-  serviceAccount:
+  podIdentity:
     metadata:
       name: argocd-repo-server
       namespace: argocd
@@ -437,7 +449,10 @@ argocd:
         "{{deployment:domain}}/alias": "{{deployment:team:alias}}"
       annotations: { }
     role:
-      name: {{deployment:id}}-argocd-repo-server-sa
+      name: {{deployment:id}}-argocd-repo-server-pod-identity
+      principal:
+        type: service
+        value: pods.eks.amazonaws.com
       managedPolicyNames: [ ]
       customPolicies:
         - name: {{deployment:id}}-argocd-repo-server
@@ -454,6 +469,10 @@ argocd:
         "{{deployment:domain}}:organization": "{{deployment:organization}}"
         "{{deployment:domain}}:name": "{{deployment:team:name}}"
         "{{deployment:domain}}:alias": "{{deployment:team:alias}}"
+    tags:
+      "{{deployment:domain}}:resource-type": pod-identity-association
+      "{{deployment:domain}}:category": ci-cd
+      "{{deployment:domain}}:type": argocd
 
 argoEvents:
   chart:
@@ -463,7 +482,7 @@ argoEvents:
     version: 2.4.19
     namespace: argo-events
     values: helm/argo-events.mustache
-  controllerServiceAccount:
+  controllerPodIdentity:
     metadata:
       name: argo-events-controller
       namespace: argo-events
@@ -477,7 +496,10 @@ argoEvents:
         "{{deployment:domain}}/alias": "{{deployment:team:alias}}"
       annotations: { }
     role:
-      name: {{deployment:id}}-argo-events-controller-sa
+      name: {{deployment:id}}-argo-events-controller-pod-identity
+      principal:
+        type: service
+        value: pods.eks.amazonaws.com
       managedPolicyNames: [ ]
       customPolicies:
         - name: {{deployment:id}}-argo-events-controller
@@ -493,6 +515,10 @@ argoEvents:
         "{{deployment:domain}}:organization": "{{deployment:organization}}"
         "{{deployment:domain}}:name": "{{deployment:team:name}}"
         "{{deployment:domain}}:alias": "{{deployment:team:alias}}"
+    tags:
+      "{{deployment:domain}}:resource-type": pod-identity-association
+      "{{deployment:domain}}:category": ci-cd
+      "{{deployment:domain}}:type": argo-events
 
 argoRollouts:
   chart:
@@ -502,7 +528,7 @@ argoRollouts:
     version: 2.40.5
     namespace: argo-rollouts
     values: helm/argo-rollouts.mustache
-  controllerServiceAccount:
+  controllerPodIdentity:
     metadata:
       name: argo-rollouts-controller
       namespace: argo-rollouts
@@ -516,7 +542,10 @@ argoRollouts:
         "{{deployment:domain}}/alias": "{{deployment:team:alias}}"
       annotations: {}
     role:
-      name: {{deployment:id}}-argo-rollouts-controller-sa
+      name: {{deployment:id}}-argo-rollouts-controller-pod-identity
+      principal:
+        type: service
+        value: pods.eks.amazonaws.com
       managedPolicyNames: []
       customPolicies: []
       tags:
@@ -527,7 +556,11 @@ argoRollouts:
         "{{deployment:domain}}:organization": "{{deployment:organization}}"
         "{{deployment:domain}}:name": "{{deployment:team:name}}"
         "{{deployment:domain}}:alias": "{{deployment:team:alias}}"
-  dashboardServiceAccount:
+    tags:
+      "{{deployment:domain}}:resource-type": pod-identity-association
+      "{{deployment:domain}}:category": ci-cd
+      "{{deployment:domain}}:type": argo-rollouts
+  dashboardPodIdentity:
     metadata:
       name: argo-rollouts-dashboard
       namespace: argo-rollouts
@@ -541,7 +574,10 @@ argoRollouts:
         "{{deployment:domain}}/alias": "{{deployment:team:alias}}"
       annotations: {}
     role:
-      name: {{deployment:id}}-argo-rollouts-dashboard-sa
+      name: {{deployment:id}}-argo-rollouts-dashboard-pod-identity
+      principal:
+        type: service
+        value: pods.eks.amazonaws.com
       managedPolicyNames: []
       customPolicies: []
       tags:
@@ -552,6 +588,10 @@ argoRollouts:
         "{{deployment:domain}}:organization": "{{deployment:organization}}"
         "{{deployment:domain}}:name": "{{deployment:team:name}}"
         "{{deployment:domain}}:alias": "{{deployment:team:alias}}"
+    tags:
+      "{{deployment:domain}}:resource-type": pod-identity-association
+      "{{deployment:domain}}:category": ci-cd
+      "{{deployment:domain}}:type": argo-rollouts
   ingress: setup/argo-rollouts-ingress.mustache
 
 velero:
@@ -565,7 +605,7 @@ velero:
   bucket:
     name: {{deployment:id}}-velero-backups
     region: {{deployment:region}}
-  serviceAccount:
+  podIdentity:
     metadata:
       name: velero
       namespace: velero
@@ -580,6 +620,10 @@ velero:
       annotations: { }
     role:
       name: {{deployment:id}}-velero-sa
+      principal:
+        type: service
+        value: pods.eks.amazonaws.com
+        action: sts:AssumeRole
       managedPolicyNames: [ ]
       customPolicies:
         - name: {{deployment:id}}-velero
