--- a/src/main/resources/production/v1/helm/argocd.mustache
+++ b/src/main/resources/production/v1/helm/argocd.mustache
@@ -189,7 +189,7 @@ repoServer:
       memory: 256Mi
 
   serviceAccount:
-    create: false
+    create: true
     name: argocd-repo-server
 
   metrics:
@@ -361,36 +361,3 @@ extraObjects:
     stringData:
       client-id: argo-rollouts
       client-secret: "{{argoRollouts.ssoClientSecret}}"
-  - apiVersion: v1
-    kind: Secret
-    metadata:
-      name: argo-rollouts-alb-oidc
-      namespace: argo-rollouts
-      labels:
-        app.kubernetes.io/part-of: argocd
-    type: Opaque
-    stringData:
-      clientId: argo-rollouts
-      clientSecret: "{{argoRollouts.ssoClientSecret}}"
-  - apiVersion: rbac.authorization.k8s.io/v1
-    kind: Role
-    metadata:
-      name: alb-controller-secrets-reader
-      namespace: argo-rollouts
-    rules:
-      - apiGroups: [""]
-        resources: ["secrets"]
-        verbs: ["get", "list", "watch"]
-  - apiVersion: rbac.authorization.k8s.io/v1
-    kind: RoleBinding
-    metadata:
-      name: alb-controller-secrets-reader
-      namespace: argo-rollouts
-    subjects:
-      - kind: ServiceAccount
-        name: {{alb.serviceAccountName}}
-        namespace: aws-load-balancer
-    roleRef:
-      kind: Role
-      name: alb-controller-secrets-reader
-      apiGroup: rbac.authorization.k8s.io
