--- a/src/main/resources/production/v1/helm/backstage.mustache
+++ b/src/main/resources/production/v1/helm/backstage.mustache
@@ -60,14 +60,17 @@ ingress:
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
     alb.ingress.kubernetes.io/ssl-redirect: "443"
-    alb.ingress.kubernetes.io/certificate-arn: "{{certificate.arn}}"
+    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
     alb.ingress.kubernetes.io/healthcheck-path: /.backstage/health/v1/readiness
     alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
     alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
     alb.ingress.kubernetes.io/healthy-threshold-count: "2"
     alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
+    alb.ingress.kubernetes.io/group.name: backstage-platform
+    external-dns.alpha.kubernetes.io/hostname: backstage.{{deployment:domain}}
+    external-dns.alpha.kubernetes.io/ttl: "300"
   hosts:
     - host: backstage.{{deployment:domain}}
       paths:
